--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -4,7 +4,8 @@ $limeGreen: #D2F34C;
 $lightGreen: #00BF58;
 
 // Secondary colors
-$grey: #EFF6F3;
+$greenBg: #EFF6F3;
+$darkGrey: rgb(170, 170, 170);
 $cream: #F8FDE4;
 $brown: #755146;
 $black: #000000;
