--- a/public/styles/App.css
+++ b/public/styles/App.css
@@ -219,6 +219,7 @@ template {
 
 html {
   font-size: 125%;
+  scroll-behavior: smooth;
 }
 
 h1,
@@ -404,6 +405,28 @@ h1 * {
 }
 .buttonSquareGreen:active {
   transform: scale(0.95);
+}
+
+.scrollToTop {
+  position: fixed;
+  z-index: 100;
+  bottom: 20px;
+  right: 20px;
+  font-size: 0.6rem;
+  border-radius: 50%;
+  transition: all 0.3s linear;
+}
+.scrollToTop span {
+  display: block;
+  padding: 2px 0;
+}
+
+.scrollVisible {
+  opacity: 1;
+}
+
+.scrollHidden {
+  opacity: 0;
 }
 
 .mainHeader {
