--- a/src/styles/base/_buttons.scss
+++ b/src/styles/base/_buttons.scss
@@ -52,19 +52,26 @@
 .scrollToTop {
   position: fixed;
   z-index: 100;
-  bottom: 20px;
-  right: 20px;
+  bottom: 0;
+  right: 50%;
+  transform: translate(50%,-50%);
   font-size: 0.6rem;
-  border-radius: 50%;
-  transition: all 0.3s linear;
-  span {
-    display: block;
-    padding: 2px 0;
+  border-radius: 10px;
+  background-color: $lightGreen;
+  opacity: 0.7;
+  padding: 0 10px;
+  color: black;
+  &:hover {
+    color: white;
+  background-color: $brown;
+  }
+  &:active {
+    transform: translate(50%,-50%);
   }
 }
 .scrollVisible {
-  opacity: 1;
+  display: block;
 }
 .scrollHidden {
-  opacity: 0;
+  display: none;
 }
