--- a/public/styles/App.css
+++ b/public/styles/App.css
@@ -1124,7 +1124,7 @@ h1 * {
   justify-content: space-between;
   padding-bottom: 100px;
 }
-.pricingHeader h2 {
+.pricingHeader h1 {
   margin-bottom: 20px;
 }
 .pricingHeader nav {
@@ -1250,6 +1250,204 @@ h1 * {
 }
 .pricingCards button {
   width: 100%;
+}
+
+.contactHeader {
+  background-color: #EFF6F3;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+.contactHeader nav {
+  width: 100%;
+  padding: 50px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  z-index: 100;
+}
+.contactHeader .navLogo {
+  min-width: 20%;
+}
+.contactHeader .navLogo img {
+  width: 90px;
+}
+.contactHeader .navMenu {
+  min-width: 40%;
+  text-transform: capitalize;
+  font-size: 0.8rem;
+  display: flex;
+  justify-content: center;
+}
+.contactHeader .navMenu li {
+  transition: all 0.1s linear;
+  margin: 0 12px;
+  border-bottom: 2px solid transparent;
+}
+.contactHeader .navMenu li:hover, .contactHeader .navMenu li:focus {
+  transform: scale(1.3);
+  border-bottom: 2px solid #00BF58;
+}
+.contactHeader .navButtons {
+  min-width: 20%;
+  display: flex;
+  justify-content: flex-end;
+}
+.contactHeader .navButtons .buttonRoundGreen {
+  margin-left: 10px;
+}
+
+.contactUsMap {
+  background-color: #EFF6F3;
+  width: 100%;
+  min-height: 460px;
+  height: 600px;
+  max-width: 2000px;
+}
+.contactUsMap img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  opacity: 0.8;
+}
+
+.flexed {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.contactDiv {
+  max-width: 850px;
+  width: 95%;
+  margin: 0 auto;
+  padding-top: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.contactDiv h1 {
+  margin-bottom: 50px;
+}
+
+.contactTypes {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 50px;
+}
+.contactTypes li {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 240px;
+}
+.contactTypes li p {
+  font-size: 0.8rem;
+  padding: 5px 0;
+  color: rgb(170, 170, 170);
+}
+.contactTypes li a {
+  font-size: 0.7rem;
+  text-decoration: underline;
+  transition: all 0.1s linear;
+}
+.contactTypes li a:hover {
+  color: #00BF58;
+}
+.contactTypes li .contactPhone {
+  font-size: 1rem;
+  color: #31795A;
+}
+.contactTypes h5 {
+  padding: 25px 0;
+}
+
+.contactIcons {
+  width: 100px;
+}
+
+.contactUs form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 100px 0;
+}
+.contactUs form input,
+.contactUs form textarea {
+  border: none;
+  background-color: #f2f2f2;
+  border-radius: 10px;
+  padding: 10px;
+}
+.contactUs form label {
+  font-size: 0.7rem;
+  margin-bottom: 10px;
+  color: rgb(170, 170, 170);
+}
+.contactUs .contactUsTop {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 25px;
+}
+.contactUs .contactUsName,
+.contactUs .contactUsEmail {
+  width: calc(50% - 20px);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.contactUs .contactUsName input,
+.contactUs .contactUsEmail input {
+  width: 100%;
+}
+.contactUs .contactUsMiddle {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  margin-bottom: 35px;
+}
+.contactUs .contactUsMiddle input {
+  width: 100%;
+}
+.contactUs .contactUsBottom {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.contactUs .contactUsBottom textarea {
+  width: 100%;
+  padding: 20px;
+  resize: none;
+}
+.contactUs .contactUsBottom button {
+  margin-top: 35px;
+  width: 100%;
+  background-color: #31795A;
+  text-transform: uppercase;
+  padding: 15px 0;
+  font-size: 0.7rem;
+  transition: all 0.1s linear;
+}
+.contactUs .contactUsBottom button:hover {
+  background-color: #755146;
+}
+.contactUs .contactUsBottom button:active {
+  transform: scale(0.95);
 }
 
 /*# sourceMappingURL=App.css.map */
