--- a/public/styles/App.css
+++ b/public/styles/App.css
@@ -487,15 +487,59 @@ h1 * {
   font-size: 0.8rem;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 .mainHeader .navMenu li {
   transition: all 0.1s linear;
   margin: 0 12px;
   border-bottom: 2px solid transparent;
 }
-.mainHeader .navMenu li:hover, .mainHeader .navMenu li:focus {
+.mainHeader .navMenu li:hover:not(.subMenuParent), .mainHeader .navMenu li:focus:not(.subMenuParent) {
   transform: scale(1.3);
   border-bottom: 2px solid #00BF58;
+}
+.mainHeader .navMenu .subMenuParent {
+  position: relative;
+  cursor: pointer;
+  background-color: #EFF6F3;
+  padding: 5px 10px;
+  border-radius: 5px;
+  border: 2px solid transparent;
+}
+.mainHeader .navMenu .subMenuParent:hover {
+  border: 2px solid #00BF58;
+}
+.mainHeader .navMenu .subMenu {
+  visibility: hidden;
+  padding: 15px 5px;
+  height: 0;
+  width: 150px;
+  background-color: #EFF6F3;
+  position: absolute;
+  height: 0px;
+  top: 40px;
+  left: -2px;
+  transition: all 0.3s linear;
+  overflow: hidden;
+  border: 2px solid #755146;
+  border-radius: 5px;
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.mainHeader .navMenu .subMenu li {
+  padding: 5px 0;
+  margin: 5px 0;
+  border-bottom: 2px solid transparent;
+}
+.mainHeader .navMenu .subMenu li:hover {
+  transform: scale(1.05);
+  border-bottom: 2px solid #00BF58;
+}
+.mainHeader .navMenu .slideOut {
+  visibility: visible;
+  height: 200px;
 }
 .mainHeader .navButtons {
   min-width: 20%;
