--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -33,15 +33,59 @@
     font-size: 0.8rem;
     display: flex;
     justify-content: center;
+    align-items: center;
     li {
       transition: all 0.1s linear;
       margin: 0 12px;
       border-bottom: 2px solid transparent;
-      &:hover,
-      &:focus {
+      &:hover:not(.subMenuParent),
+      &:focus:not(.subMenuParent){
         transform: scale(1.3);
         border-bottom: 2px solid $lightGreen;
       }
+    }
+    .subMenuParent {
+      position: relative;
+      cursor: pointer;
+      background-color: $greenBg;
+      padding: 5px 10px;
+      border-radius: 5px;
+      border: 2px solid transparent;
+      &:hover {
+        border: 2px solid $lightGreen;
+      }
+    }
+    .subMenu {
+      visibility: hidden;
+      padding: 15px 5px;
+      height: 0;
+      width: 150px;
+      background-color: $greenBg;
+      position: absolute;
+      height: 0px;
+      top: 40px;
+      left: -2px;
+      transition: all 0.3s linear;
+      overflow: hidden;
+      border: 2px solid $brown;
+      border-radius: 5px;
+      display: flex;
+      justify-content: flex-start;
+      flex-direction: column;
+      align-items: flex-start;
+      li {
+        padding: 5px 0;
+        margin: 5px 0;
+        border-bottom: 2px solid transparent;
+        &:hover {
+          transform: scale(1.05);
+          border-bottom: 2px solid $lightGreen;
+        }
+      }
+    }
+    .slideOut {
+      visibility: visible;
+      height: 200px;
     }
   }
   .navButtons {
