--- a/public/styles/App.css
+++ b/public/styles/App.css
@@ -513,20 +513,20 @@ h1 * {
   visibility: hidden;
   padding: 15px 5px;
   height: 0;
-  width: 150px;
   background-color: #EFF6F3;
   position: absolute;
   height: 0px;
   top: 40px;
-  left: -2px;
+  left: -199px;
   transition: all 0.3s linear;
   overflow: hidden;
   border: 2px solid #755146;
   border-radius: 5px;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
+  width: 480px;
 }
 .mainHeader .navMenu .subMenu li {
   padding: 5px 0;
@@ -1190,15 +1190,59 @@ h1 * {
   font-size: 0.8rem;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 .pricingHeader .navMenu li {
   transition: all 0.1s linear;
   margin: 0 12px;
   border-bottom: 2px solid transparent;
 }
-.pricingHeader .navMenu li:hover, .pricingHeader .navMenu li:focus {
+.pricingHeader .navMenu li:hover:not(.subMenuParent), .pricingHeader .navMenu li:focus:not(.subMenuParent) {
   transform: scale(1.3);
   border-bottom: 2px solid #00BF58;
+}
+.pricingHeader .subMenuParent {
+  position: relative;
+  cursor: pointer;
+  background-color: #EFF6F3;
+  padding: 5px 10px;
+  border-radius: 5px;
+  border: 2px solid transparent;
+}
+.pricingHeader .subMenuParent:hover {
+  border: 2px solid #00BF58;
+}
+.pricingHeader .subMenu {
+  visibility: hidden;
+  padding: 15px 5px;
+  height: 0;
+  background-color: #EFF6F3;
+  position: absolute;
+  height: 0px;
+  top: 40px;
+  left: -199px;
+  transition: all 0.3s linear;
+  overflow: hidden;
+  border: 2px solid #755146;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  width: 480px;
+}
+.pricingHeader .subMenu li {
+  padding: 5px 0;
+  margin: 5px 0;
+  border-bottom: 2px solid transparent;
+}
+.pricingHeader .subMenu li:hover {
+  transform: scale(1.05);
+  border-bottom: 2px solid #00BF58;
+}
+.pricingHeader .slideOut {
+  visibility: visible;
+  height: 200px;
 }
 .pricingHeader .navButtons {
   min-width: 20%;
@@ -1324,15 +1368,59 @@ h1 * {
   font-size: 0.8rem;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 .contactHeader .navMenu li {
   transition: all 0.1s linear;
   margin: 0 12px;
   border-bottom: 2px solid transparent;
 }
-.contactHeader .navMenu li:hover, .contactHeader .navMenu li:focus {
+.contactHeader .navMenu li:hover:not(.subMenuParent), .contactHeader .navMenu li:focus:not(.subMenuParent) {
   transform: scale(1.3);
   border-bottom: 2px solid #00BF58;
+}
+.contactHeader .subMenuParent {
+  position: relative;
+  cursor: pointer;
+  background-color: #EFF6F3;
+  padding: 5px 10px;
+  border-radius: 5px;
+  border: 2px solid transparent;
+}
+.contactHeader .subMenuParent:hover {
+  border: 2px solid #00BF58;
+}
+.contactHeader .subMenu {
+  visibility: hidden;
+  padding: 15px 5px;
+  height: 0;
+  background-color: #EFF6F3;
+  position: absolute;
+  height: 0px;
+  top: 40px;
+  left: -199px;
+  transition: all 0.3s linear;
+  overflow: hidden;
+  border: 2px solid #755146;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  width: 480px;
+}
+.contactHeader .subMenu li {
+  padding: 5px 0;
+  margin: 5px 0;
+  border-bottom: 2px solid transparent;
+}
+.contactHeader .subMenu li:hover {
+  transform: scale(1.05);
+  border-bottom: 2px solid #00BF58;
+}
+.contactHeader .slideOut {
+  visibility: visible;
+  height: 200px;
 }
 .contactHeader .navButtons {
   min-width: 20%;
