--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -56,23 +56,23 @@
       }
     }
     .subMenu {
-      visibility: hidden;
-      padding: 15px 5px;
-      height: 0;
-      width: 150px;
-      background-color: $greenBg;
-      position: absolute;
-      height: 0px;
-      top: 40px;
-      left: -2px;
-      transition: all 0.3s linear;
-      overflow: hidden;
-      border: 2px solid $brown;
-      border-radius: 5px;
-      display: flex;
-      justify-content: flex-start;
-      flex-direction: column;
-      align-items: flex-start;
+    visibility: hidden;
+    padding: 15px 5px;
+    height: 0;
+    background-color: $greenBg;
+    position: absolute;
+    height: 0px;
+    top: 40px;
+    left: -199px;
+    transition: all 0.3s linear;
+    overflow: hidden;
+    border: 2px solid $brown;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 480px;
       li {
         padding: 5px 0;
         margin: 5px 0;
