--- a/src/styles/pages/_pricing.scss
+++ b/src/styles/pages/_pricing.scss
@@ -1,6 +1,5 @@
 @use "../base/variables" as *;
 
-
 .pricingHeader {
   background-color: $greenBg;
   display: flex;
@@ -30,16 +29,60 @@
     font-size: 0.8rem;
     display: flex;
     justify-content: center;
+    align-items: center;
     li {
       transition: all 0.1s linear;
       margin: 0 12px;
       border-bottom: 2px solid transparent;
-      &:hover,
-      &:focus {
+      &:hover:not(.subMenuParent),
+      &:focus:not(.subMenuParent) {
         transform: scale(1.3);
         border-bottom: 2px solid $lightGreen;
       }
     }
+  }
+  .subMenuParent {
+    position: relative;
+    cursor: pointer;
+    background-color: $greenBg;
+    padding: 5px 10px;
+    border-radius: 5px;
+    border: 2px solid transparent;
+    &:hover {
+      border: 2px solid $lightGreen;
+    }
+  }
+  .subMenu {
+    visibility: hidden;
+    padding: 15px 5px;
+    height: 0;
+    background-color: $greenBg;
+    position: absolute;
+    height: 0px;
+    top: 40px;
+    left: -199px;
+    transition: all 0.3s linear;
+    overflow: hidden;
+    border: 2px solid $brown;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 480px;
+    li {
+      padding: 5px 0;
+      margin: 5px 0;
+      border-bottom: 2px solid transparent;
+      &:hover {
+        transform: scale(1.05);
+        border-bottom: 2px solid $lightGreen;
+      }
+    }
+  }
+  .slideOut {
+    visibility: visible;
+    height: 200px;
   }
   .navButtons {
     min-width: 20%;
