--- a/src/styles/base/_setup.scss
+++ b/src/styles/base/_setup.scss
@@ -7,6 +7,8 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
 html {
   font-size: 125%;
   scroll-behavior: smooth;
+  // TEMPORARY TESTING
+  min-width: 950px;
 }
 h1,
 h2,
